--- a/frontend/src/app/modules/features/user/candidate-job-matches/candidate-job-matches.component.html
+++ b/frontend/src/app/modules/features/user/candidate-job-matches/candidate-job-matches.component.html
@@ -25,6 +25,7 @@
 						<app-contact-card
 						  [userInfo]="userInfo"
 						  [isEdit]="false"
+						  [isUploadShow]="true"
 						  [isContactIcon]="false"
 						  [isResume]="true"
 						  [isMultipleMatches]="isMultipleMatches"
@@ -58,9 +59,9 @@
 														</span>
 													</h6>
 													<form class="form-inline">
-														<a href="javascript:;" class="mr-3" data-toggle="modal" data-target="#matchpostModal">
+														<!-- <a href="javascript:;" class="mr-3" data-toggle="modal" data-target="#matchpostModal">
 														  <small><i class="fab fa-buffer"></i> View Other Matches</small>
-														</a>
+														</a> -->
 													</form>
 												</div>
 												<div class="pc-btn">
@@ -111,9 +112,9 @@
 														</span>
 													</h6>
 													<form class="form-inline">
-														<a href="javascript:;" class="mr-3" data-toggle="modal" data-target="#matchpostModal">
+														<!-- <a href="javascript:;" class="mr-3" data-toggle="modal" data-target="#matchpostModal">
 															<small><i class="fab fa-buffer"></i> View Other Matches</small>
-														</a>
+														</a> -->
 													</form>
 												</div>
 												<div class="pc-btn">
