--- a/frontend/src/app/shared/component/shared-job-profile-matches/shared-job-profile-matches.component.html
+++ b/frontend/src/app/shared/component/shared-job-profile-matches/shared-job-profile-matches.component.html
@@ -38,6 +38,7 @@
                         </span>
                         <span *ngIf="missingElement && (jobInfo.sap_experience > userInfo?.sap_experience)">
                           <i class="fas fa-times text-danger "></i>
+						  {{jobInfo.sap_experience ? jobInfo.sap_experience + ' Years' :'--'}}
                         </span>
                       </li>
                 </ul>
@@ -231,7 +232,7 @@
 					<li class="list-group-item">
 						<span *ngIf="matchedElement && (jobInfo?.country == findCountry([userInfo?.nationality]) || (jobInfo?.work_authorization == 0 || jobInfo?.work_authorization == 1 || jobInfo?.work_authorization == 2) )">
 							<div *ngIf="jobInfo?.country == findCountry([userInfo?.nationality])">
-							<i class="fa fa-check text-green "></i>  I am a Citizen
+							<i class="fa fa-check text-green "></i>  Authorized to work
 							  </div>
 							  <div *ngIf="jobInfo?.country != findCountry([userInfo?.nationality]) && userInfo?.work_authorization != 1 && (jobInfo?.work_authorization == 0 || jobInfo?.work_authorization == 1 || jobInfo?.work_authorization == 2)">
 								<i class="fa fa-check text-green "></i>
@@ -239,7 +240,7 @@
 							  </div>
 							  <div *ngIf="jobInfo?.visa_sponsorship == true && jobInfo?.country != findCountry([userInfo?.nationality]) && userInfo?.work_authorization == 1 ">
 								<i class="fa fa-check text-green "></i>
-								We Provide Visa Sponsership
+								Visa Sponsorship Provided
 							  </div>
 						</span>
 						<span *ngIf="missingElement && (jobInfo?.visa_sponsorship == false &&userInfo?.work_authorization == 1 && jobInfo?.country != findCountry([userInfo?.nationality]) )">
@@ -439,6 +440,7 @@
                         </span>
                         <span *ngIf="missingElement && (jobInfo.sap_experience > userInfo?.sap_experience)">
                           <i class="fas fa-times text-danger "></i>
+						  {{jobInfo.sap_experience ? jobInfo.sap_experience + ' Years' :'--'}}
                         </span>
                       </li>
                 </ul>
@@ -632,7 +634,7 @@
 					<li class="list-group-item">
 						<span *ngIf="matchedElement && (jobInfo?.country == findCountry([userInfo?.nationality]) || (jobInfo?.work_authorization == 0 || jobInfo?.work_authorization == 1 || jobInfo?.work_authorization == 2) )">
 							<div *ngIf="jobInfo?.country == findCountry([userInfo?.nationality])">
-							<i class="fa fa-check text-green "></i>  I am a Citizen
+							<i class="fa fa-check text-green "></i>  Authorized to work
 							  </div>
 							  <div *ngIf="jobInfo?.country != findCountry([userInfo?.nationality]) && userInfo?.work_authorization != 1 && (jobInfo?.work_authorization == 0 || jobInfo?.work_authorization == 1 || jobInfo?.work_authorization == 2)">
 								<i class="fa fa-check text-green "></i>
@@ -640,7 +642,7 @@
 							  </div>
 							  <div *ngIf="jobInfo?.visa_sponsorship == true && jobInfo?.country != findCountry([userInfo?.nationality]) && userInfo?.work_authorization == 1 ">
 								<i class="fa fa-check text-green "></i>
-								We Provide Visa Sponsership
+								Visa Sponsorship Provided
 							  </div>
 						</span>
 						<span *ngIf="missingElement && (jobInfo?.visa_sponsorship == false &&userInfo?.work_authorization == 1 && jobInfo?.country != findCountry([userInfo?.nationality]) )">
@@ -842,6 +844,7 @@
                         </span>
                         <span *ngIf="missingElement && (jobInfo.sap_experience > userInfo?.sap_experience)">
                           <i class="fas fa-times text-danger "></i>
+						  {{jobInfo.sap_experience ? jobInfo.sap_experience + ' Years' :'--'}}
                         </span>
                       </li>
                 </ul>
@@ -1035,7 +1038,7 @@
 					<li class="list-group-item">
 						<span *ngIf="matchedElement && (jobInfo?.country == findCountry([userInfo?.nationality]) || (jobInfo?.work_authorization == 0 || jobInfo?.work_authorization == 1 || jobInfo?.work_authorization == 2) )">
 							<div *ngIf="jobInfo?.country == findCountry([userInfo?.nationality])">
-							<i class="fa fa-check text-green "></i>  I am a Citizen
+							<i class="fa fa-check text-green "></i>  Authorized to work
 							  </div>
 							  <div *ngIf="jobInfo?.country != findCountry([userInfo?.nationality]) && userInfo?.work_authorization != 1 && (jobInfo?.work_authorization == 0 || jobInfo?.work_authorization == 1 || jobInfo?.work_authorization == 2)">
 								<i class="fa fa-check text-green "></i>
@@ -1043,7 +1046,7 @@
 							  </div>
 							  <div *ngIf="jobInfo?.visa_sponsorship == true && jobInfo?.country != findCountry([userInfo?.nationality]) && userInfo?.work_authorization == 1 ">
 								<i class="fa fa-check text-green "></i>
-								We Provide Visa Sponsership
+								Visa Sponsorship Provided
 							  </div>
 						</span>
 						<span *ngIf="missingElement && (jobInfo?.visa_sponsorship == false &&userInfo?.work_authorization == 1 && jobInfo?.country != findCountry([userInfo?.nationality]) )">
@@ -1240,6 +1243,7 @@
                         </span>
                         <span *ngIf="missingElement && (jobInfo.sap_experience > userInfo?.sap_experience)">
                           <i class="fas fa-times text-danger "></i>
+						  {{jobInfo.sap_experience ? jobInfo.sap_experience + ' Years' :'--'}}
                         </span>
                       </li>
                 </ul>
@@ -1433,7 +1437,7 @@
 					<li class="list-group-item">
 						<span *ngIf="matchedElement && (jobInfo?.country == findCountry([userInfo?.nationality]) || (jobInfo?.work_authorization == 0 || jobInfo?.work_authorization == 1 || jobInfo?.work_authorization == 2) )">
 							<div *ngIf="jobInfo?.country == findCountry([userInfo?.nationality])">
-							<i class="fa fa-check text-green "></i>  I am a Citizen
+							<i class="fa fa-check text-green "></i>  Authorized to work
 							  </div>
 							  <div *ngIf="jobInfo?.country != findCountry([userInfo?.nationality]) && userInfo?.work_authorization != 1 && (jobInfo?.work_authorization == 0 || jobInfo?.work_authorization == 1 || jobInfo?.work_authorization == 2)">
 								<i class="fa fa-check text-green "></i>
@@ -1441,7 +1445,7 @@
 							  </div>
 							  <div *ngIf="jobInfo?.visa_sponsorship == true && jobInfo?.country != findCountry([userInfo?.nationality]) && userInfo?.work_authorization == 1 ">
 								<i class="fa fa-check text-green "></i>
-								We Provide Visa Sponsership
+								Visa Sponsorship Provided
 							  </div>
 						</span>
 						<span *ngIf="missingElement && (jobInfo?.visa_sponsorship == false &&userInfo?.work_authorization == 1 && jobInfo?.country != findCountry([userInfo?.nationality]) )">
