--- a/frontend/src/app/modules/features/employer/post-job/post-job-header/post-job-header.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/post-job-header/post-job-header.component.html
@@ -17,7 +17,7 @@
     <a
     (click)="onTabChange({tabName: 'Other Prefernece', tabNumber: 3})"
     href="javascript:;" class="nav-link" [ngClass]="{'active': currentTabInfo.tabNumber == 3}">
-    Other Prefernece
+    Other Preference
     </a>
   </li>
 </ul>
